--- a/Contact-Page-Project/contact.html
+++ b/Contact-Page-Project/contact.html
@@ -82,7 +82,7 @@
               <label for="">Email</label>
             </div>
             <div class="input-container">
-              <input type="tel" name="phone" class="input" />
+              <input type="tel" name="phone" class="input" pattern="\+?[0-9\s\-]{10,}" />
               <label for="">Phone</label>
             </div>
             <div class="input-container textarea">
